# UnCSO2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  UnCSO2.sln  appveyor.yml  git-version-gen.cmd  libuncso2  setupcryptopp_win.ps1
appimage/: UnCSO2.desktop
ci/: build.ps1  pack.ps1  setup.ps1
cmake_modules/: uc2_version.cmake
headers/: archivebasenode.hpp  archivedirectorynode.hpp  archivefilenode.hpp  busywinwrapper.hpp  dynindexfilefactory.hpp  dynpkgfilefactory.hpp  entryflagdetection.hpp  fileproperties.hpp  fsutils.hpp  gamedatainfo.hpp  indexkeycollections.hpp  miscutils.hpp  nodeextractionmgr.hpp  pkgfilemodel.hpp  pkgfilemodelsorter.hpp  pkgfilesystemshared.hpp  pkgfileview.hpp  specialfilehandler.hpp  uc2_version.hpp.in  uncso2app.hpp
headers/layouts/: aboutdialog.hpp  indexpropertiesdialog.hpp  loadindexdialog.hpp  mainwindow.hpp  pkgpropertiesdialog.hpp
headers/widgets/: errorbox.hpp  statuswidget.hpp
resources/: icons-breeze.qrc  icons-uncso2.qrc
resources/layouts/: aboutdialog.ui  indexpropertiesdialog.ui  loadindexdialog.ui  mainwindow.ui  pkgpropertiesdialog.ui
resources/win32/: uncso2.rc
sources/: archivebasenode.cpp  archivedirectorynode.cpp  archivefilenode.cpp  busywinwrapper.cpp  dynindexfilefactory.cpp  dynpkgfilefactory.cpp  entryflagdetection.cpp  fileproperties.cpp  fsutils.cpp  gamedatainfo.cpp  main.cpp  nodeextractionmgr.cpp  pkgfilemodel.cpp  pkgfilemodelsorter.cpp  pkgfileview.cpp  specialfilehandler.cpp  uncso2app.cpp
sources/layouts/: aboutdialog.cpp  indexpropertiesdialog.cpp  loadindexdialog.cpp  mainwindow.cpp  pkgpropertiesdialog.cpp
sources/widgets/: errorbox.cpp  statuswidget.cpp
src/: Rijndael.cpp  UnCSO2.pri  UnCSO2.pro  UnCSO2.qrc  UnCSO2.vcxproj  UnCSO2.vcxproj.filters  cso2bsp.cpp  cso2bsp.h  cso2vtf.cpp  cso2vtf.h  cso2zip_uncompressed.h  decryption.cpp  decryption.h  lzmaDecoder.cpp  lzmaDecoder.h  main.cpp  pkgfilesystem.cpp  pkgfilesystem.h  pkgindex.cpp  pkgindex.h  stdafx.h  uncso2app.cpp  uncso2app.h  vc17_filesystem.h  version.cpp  version.h
src/qt/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pkgfilesystemmodel.cpp  pkgfilesystemmodel.h  pkgfilesystemnode.cpp  pkgfilesystemnode.h
